# liteconfig

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh  package.json
.github/workflows/: ci.yml  release.yml
crates/liteconfig-core/: Cargo.toml
crates/liteconfig-core/src/: db.rs  error.rs  fs_util.rs  lib.rs  paths.rs  presets.rs  settings.rs  test_util.rs
crates/liteconfig-core/src/agents/: claude.rs  codex.rs  cursor.rs  gemini.rs  mod.rs  opencode.rs
crates/liteconfig-core/src/model/: agent.rs  mcp.rs  mod.rs  plugin.rs  profile.rs  rule.rs  skill.rs  skill_repo.rs
crates/liteconfig-core/src/services/: backup_service.rs  mcp_index_service.rs  mcp_service.rs  mod.rs  plugin_service.rs  profile_service.rs  rule_service.rs  secrets_service.rs  skill_cli_service.rs  skill_index_service.rs  skill_repo_service.rs  skill_service.rs
crates/liteconfig-core/tests/: adapter_roundtrip.rs  agent_opencode.rs  cursor_adapter.rs  skill_cli_detect.rs  skill_repo_service.rs  skill_repo_service_branch.rs
crates/liteconfig-tui/: Cargo.toml
crates/liteconfig-tui/src/: app.rs  events.rs  lib.rs  main.rs  tasks.rs  theme.rs
crates/liteconfig-tui/src/ui/: mod.rs  status_bar.rs
crates/liteconfig-tui/src/ui/tabs/: backup.rs  coming_soon.rs  mcp.rs  mod.rs  placeholder.rs  plugins.rs  profiles.rs  rules.rs  settings.rs  skills.rs
crates/liteconfig-tui/src/ui/widgets/: activity_panel.rs  agent_popup.rs  button_bar.rs  filter_bar.rs  help_overlay.rs  install_log_popup.rs  mcp_search_popup.rs  method_popup.rs  mod.rs  presets_popup.rs  search_skills_popup.rs  toast.rs
crates/liteconfig-tui/tests/: activity_indicator.rs  backup_snapshot_delete.rs  gh_backup_settings_flow.rs  help_overlay.rs  mcp_filter.rs  mcp_flow.rs  mcp_marketplace_install.rs  method_popup.rs  plugins_flow.rs  presets_install.rs  rules_filter.rs  rules_flow.rs  skill_status_transitions.rs  skills_filter.rs  skills_flow.rs  startup_rescan.rs  task_runner_integration.rs
docs/: ROADMAP.md
packaging/homebrew/: liteconfig.rb
scripts/: render-homebrew-formula.js
test/: install-sh.test.js  liteconfig-bin.test.js  render-homebrew-formula.test.js
themes/: CONTRIBUTING.md  abyss.json  cardinal.json  catppuccin-frappe.json  catppuccin-latte.json  catppuccin-macchiato.json  catppuccin-mocha.json  dark.json  dracula.json  gruvbox.json  light.json  monokai.json  noir-berry.json  nord.json  slater.json  solarized.json  velvet-ember.json  vesper.json
